= Changelog
:toc:

== v0.2.0 [unreleased]
=== Added
    * A table of contents to changelog.
    * The `title-font` command.
    * The `title-msg` command.
    * The `body-align` command.
    * The `title-align` command.
    * The `body-color` command.
    * The `title-color` command.

=== Changed
    * Updated documentation to be ordered more logically.

== v0.1.0 - 2018-10-13
=== Added
    * The `show` command.
    * The `reset` command.
    * The `quit` command.
    * The `body-font` command.
    * The `body-msg` command.
    * The `window-bg` command.
    * The `window-margin` command.
    * The `window-pos` command.
    * The `window-size` command.
    * The `window-timeout` command.