@@ -176,7 +176,7 @@ Sets the text of the title\&.
 \fBWindow\fR
 .RS 4
 .PP
-\fIwindow\-bg <color>\fR
+\fIwindow\-color <color>\fR
 .RS 4
 Sets the color of the background\&.
 .RE
